--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,20 @@
+body {
+    font-family: "Roboto", sans-serif;
+}
+
 .header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-top: 35px;
+    padding-bottom: 35px;
+    padding-left: 34px;
+    border: 1px solid #d4d4d4;
+}
+
+.search-input {
+    background-image: url(../image/search-icon.svg);
+    background-repeat: no-repeat;
+    padding-left: 38px;
+    border: none;
 }
