--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: "Roboto", sans-serif;
+    font-weight: 400;
 }
 
 .header {
@@ -15,6 +16,37 @@ body {
 .search-input {
     background-image: url(../image/search-icon.svg);
     background-repeat: no-repeat;
+    background-position: center left;
     padding-left: 38px;
     border: none;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 21px;
+    color: #a5a5a5;
+}
+
+.navigation-link {
+    text-decoration: none;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 21px;
+    color: #363636;
+    margin-right: 18px;
+}
+
+.sign-up {
+    font-size: 18px;
+    line-height: 21px;
+    border: none;
+    color: #5671f6;
+    background-color: #fff;
+}
+
+.login {
+    font-size: 18px;
+    line-height: 21px;
+    border: none;
+    color: #fff;
+    background-color: #5671f6;
 }
