--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,16 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-top: 35px;
-    padding-bottom: 35px;
+    height: 104.5px;
     padding-left: 34px;
     border: 1px solid #d4d4d4;
+}
+
+.line {
+    height: 100%;
+    width: 1px;
+    background-color: #d4d4d4;
+    margin-left: 34px;
 }
 
 .search-input {
@@ -24,6 +30,13 @@ body {
     font-size: 18px;
     line-height: 21px;
     color: #a5a5a5;
+    margin-left: 34px;
+    margin-right: auto;
+}
+
+.navigation {
+    margin-right: 44px;
+    margin-left: auto;
 }
 
 .navigation-link {
@@ -35,17 +48,31 @@ body {
     margin-right: 18px;
 }
 
+.button-group {
+    height: 100%;
+}
+
+.button {
+    height: 100%;
+    cursor: pointer;
+}
+
 .sign-up {
     font-size: 18px;
     line-height: 21px;
+    padding-right: 34px;
+    padding-left: 34px;
     border: none;
     color: #5671f6;
     background-color: #fff;
+    border-left: 1px solid #d4d4d4;
 }
 
 .login {
     font-size: 18px;
     line-height: 21px;
+    padding-right: 50px;
+    padding-left: 50px;
     border: none;
     color: #fff;
     background-color: #5671f6;
