--- a/css/style.css
+++ b/css/style.css
@@ -1,173 +1,214 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  color: #363636;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    color: #363636;
 }
 
 .header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 104.5px;
-  padding-left: 34px;
-  border: 1px solid #d4d4d4;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 104.5px;
+    padding-left: 34px;
+    border: 1px solid #d4d4d4;
 }
 
 .line {
-  height: 100%;
-  width: 1px;
-  background-color: #d4d4d4;
-  margin-left: 34px;
+    height: 100%;
+    width: 1px;
+    background-color: #d4d4d4;
+    margin-left: 34px;
 }
 
 .search-input {
-  background-image: url(../image/search-icon.svg);
-  background-repeat: no-repeat;
-  background-position: center left;
-  padding-left: 38px;
-  border: none;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 21px;
-  color: #a5a5a5;
-  margin-left: 34px;
-  margin-right: auto;
+    background-image: url(../image/search-icon.svg);
+    background-repeat: no-repeat;
+    background-position: center left;
+    padding-left: 38px;
+    border: none;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 21px;
+    color: #a5a5a5;
+    margin-left: 34px;
+    margin-right: auto;
 }
 
 .navigation {
-  margin-right: 44px;
-  margin-left: auto;
+    margin-right: 44px;
+    margin-left: auto;
 }
 
 .navigation-link {
-  text-decoration: none;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 21px;
-  color: #363636;
-  margin-right: 18px;
+    text-decoration: none;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 21px;
+    color: #363636;
+    margin-right: 18px;
 }
 
 .button-group {
-  height: 100%;
+    height: 100%;
 }
 
 .button {
-  height: 100%;
-  cursor: pointer;
+    height: 100%;
+    cursor: pointer;
 }
 
 .sign-up {
-  font-size: 18px;
-  line-height: 21px;
-  padding-right: 34px;
-  padding-left: 34px;
-  border: none;
-  color: #5671f6;
-  background-color: #fff;
-  border-left: 1px solid #d4d4d4;
+    font-size: 18px;
+    line-height: 21px;
+    padding-right: 34px;
+    padding-left: 34px;
+    border: none;
+    color: #5671f6;
+    background-color: #fff;
+    border-left: 1px solid #d4d4d4;
 }
 
 .login {
-  font-size: 18px;
-  line-height: 21px;
-  padding-right: 50px;
-  padding-left: 50px;
-  border: none;
-  color: #fff;
-  background-color: #5671f6;
+    font-size: 18px;
+    line-height: 21px;
+    padding-right: 50px;
+    padding-left: 50px;
+    border: none;
+    color: #fff;
+    background-color: #5671f6;
 }
 
 .container {
-  width: 1130px;
-  margin: auto;
+    width: 1130px;
+    margin: auto;
 }
 
 .film {
-  padding-top: 80px;
-  padding-bottom: 80px;
+    padding-top: 80px;
+    padding-bottom: 80px;
+    border-bottom: 1px solid #D4D4D4;
 }
 
 .film-wrapper {
-  display: flex;
+    display: flex;
 }
 
 .film-trailer {
-  display: flex;
-  flex-direction: column;
-  margin-right: 60px;
+    display: flex;
+    flex-direction: column;
+    margin-right: 60px;
 }
 
 .poster {
-  border-top-right-radius: 5px;
-  border-top-left-radius: 5px;
-  width: 358px;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+    width: 358px;
 }
 
 .trailer-button {
-  display: flex;
-  align-items: center;
-  justify-content: сenter;
-  background-color: #fff;
-  border: 1px solid #d4d4d4;
-  border-radius: 0px 0px 5px 5px;
-  padding-top: 25px;
-  padding-bottom: 25px;
-  cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #fff;
+    border: 1px solid #d4d4d4;
+    border-radius: 0px 0px 5px 5px;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    cursor: pointer;
 }
 
 .trailer-button-icon {
-  margin-right: 14px;
+    margin-right: 14px;
 }
 
 .film-title {
-  font-style: normal;
-  font-weight: 900;
-  font-size: 36px;
-  line-height: 42px;
-  margin-top: 0;
-  margin-bottom: 16px;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 36px;
+    line-height: 42px;
+    margin-top: 0;
+    margin-bottom: 16px;
 }
 
 .film-subtitle {
-  display: block;
-  margin-bottom: 32px;
-  font-size: 18px;
-  line-height: 21px;
-  color: #a5a5a5;
+    display: block;
+    margin-bottom: 32px;
+    font-size: 18px;
+    line-height: 21px;
+    color: #a5a5a5;
 }
 
 .film-description {
-  font-size: 14px;
-  line-height: 150%;
-  color: #000000;
-  width: 514px;
-  margin-bottom: 50px;
+    font-size: 14px;
+    line-height: 150%;
+    color: #000000;
+    width: 514px;
+    margin-bottom: 50px;
 }
 
 .about-film {
-  display: flex;
-  margin-bottom: 50px;
+    display: flex;
+    margin-bottom: 50px;
 }
 
 .about-text {
-  display: block;
-  font-size: 16px;
-  line-height: 19px;
-  margin-bottom: 16px;
-}
-
-.left-side {
+    display: block;
+    font-size: 16px;
+    line-height: 19px;
+    margin-bottom: 16px;
 }
 
 .right-side {
-  margin-left: 40px;
+    margin-left: 40px;
 }
 
 .about-bold {
-  display: inline-block;
-  width: 100px;
-  vertical-align: top;
-  font-weight: bold;
+    display: inline-block;
+    width: 100px;
+    vertical-align: top;
+    font-weight: bold;
+}
+
+.rating {
+    display: flex;
+    align-items: center;
+}
+
+.rating-counter {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100px;
+    width: 100px;
+    border: 1px solid #5671F6;
+    border-radius: 10px;
+    margin-right: 28px;
+    font-weight: bold;
+    font-size: 28px;
+    line-height: 33px;
+    color: #5671F6;
+}
+
+.rating-title {
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 21px;
+    margin-top: 0;
+    margin-bottom: 12px;
+}
+
+.rating-text {
+    display: block;
+    margin-bottom: 7px;
+    font-size: 16px;
+    line-height: 19px;
+}
+
+.rating-text-bold {
+    font-weight: bold;
 }
