--- a/css/style.css
+++ b/css/style.css
@@ -212,3 +212,27 @@ body {
 .rating-text-bold {
     font-weight: bold;
 }
+
+.cast {
+    padding-top: 70px;
+    padding-bottom: 100px;
+}
+
+.tabs {
+    display: flex;
+    align-items: center;
+}
+
+.section-title {
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 28px;
+    color: #A5A5A5;
+    margin-right: 30px;
+    cursor: pointer;
+}
+
+.section-title.active {
+    font-weight: 900;
+    color: #363636;
+}
