--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,7 @@ body {
     justify-content: space-between;
     height: 104.5px;
     padding-left: 34px;
-    border: 1px solid #d4d4d4;
-    border-top: 0px;
+    border-bottom: 1px solid #d4d4d4;
 }
 
 .header-logo::after {
@@ -91,6 +90,10 @@ body {
     border: none;
     color: #fff;
     background-color: #5671f6;
+}
+
+.mobile-buttons {
+    display: none;
 }
 
 .m-menu-button {
@@ -519,6 +522,30 @@ body {
         width: 95%;
     }
 
+    .film-title {
+        font-size: 20px;
+        line-height: 23px;
+        margin-bottom: 12px;
+    }
+
+    .film-subtitle {
+        font-size: 14px;
+        line-height: 16px;
+        margin-bottom: 26px;
+    }
+
+    .film-description {
+        font-size: 14px;
+        line-height: 150%;
+        margin-bottom: 40px;
+    }
+
+    .about-film {
+        flex-wrap: wrap;
+        flex-direction: column;
+        margin-bottom: 40px;
+    }
+
     .line {
         display: none;
     }
@@ -545,8 +572,50 @@ body {
         margin-bottom: 0;
     }
 
+    .film-trailer {
+        margin-bottom: 30px;
+    }
+
     .header {
         padding-right: 2.5%;
         padding-left: 2.5%;
+    }
+
+    .mobile-buttons {
+        display: block;
+    }
+
+    .rating {
+        margin-bottom: 15px;
+    }
+
+    .right-side {
+        margin-left: 0;
+    }
+
+    .about-bold {
+        display: inline-block;
+    }
+
+    .card {
+        flex-basis: 100%;
+        margin-bottom: 20px;
+    }
+
+    .card-image {
+        width: 60px;
+        height: 60px;
+    }
+
+    .tabs {
+        margin-bottom: 35px;
+    }
+
+    .cast {
+        padding-bottom: 50px;
+    }
+
+    .news-card {
+        flex-basis: 80%;
     }
 }
