--- a/css/style.css
+++ b/css/style.css
@@ -157,6 +157,7 @@ body {
     padding-top: 25px;
     padding-bottom: 25px;
     cursor: pointer;
+    text-decoration: none;
 }
 
 .trailer-button-icon {
@@ -514,7 +515,6 @@ body {
     .search-input {
         padding-left: 20px;
     }
-
 }
 
 @media (max-width: 576px) {
