--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,16 @@ body {
 .header {
     display: flex;
     align-items: center;
-    justify-content: space-between;
     height: 104.5px;
     padding-left: 34px;
     border-bottom: 1px solid #d4d4d4;
+}
+
+.m-menu {
+    height: 100%;
+    align-items: center;
+    display: flex;
+    flex-grow: 1;
 }
 
 .header-logo::after {
@@ -466,6 +472,19 @@ body {
         height: 80px;
     }
 
+    .m-menu {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        position: fixed;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        background: #5671f6;
+    }
+
     .film {
         padding-top: 50px;
         padding-bottom: 60px;
@@ -494,19 +513,17 @@ body {
         padding-bottom: 70px;
     }
 
-    .button-group {
-        width: 100%;
+    .mobile-buttons {
+        display: none;
     }
 
     .login {
-        width: 49%;
         font-size: 14px;
         padding-right: 10px;
         padding-left: 10px;
     }
 
     .sign-up {
-        width: 49%;
         font-size: 14px;
         padding-left: 5px;
         padding-right: 5px;
@@ -514,6 +531,22 @@ body {
 
     .search-input {
         padding-left: 20px;
+        margin: 0;
+    }
+
+    .button-group {
+        display: flex;
+        align-items: center;
+        height: auto;
+        flex-direction: column;
+    }
+
+    .navigation {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 0;
     }
 }
 
@@ -538,6 +571,7 @@ body {
         font-size: 14px;
         line-height: 150%;
         margin-bottom: 40px;
+        width: 310px;
     }
 
     .about-film {
@@ -562,11 +596,14 @@ body {
         width: auto;
     }
 
-    .film-trailer,
     .poster {
         width: 100%;
     }
 
+    .film-trailer {
+        width: 100%;
+        margin-right: 30px;
+    }
     .film-text {
         order: 1;
         margin-bottom: 0;
