--- a/css/style.css
+++ b/css/style.css
@@ -476,7 +476,7 @@ body {
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
+        justify-content: space-around;
         position: fixed;
         left: 0;
         right: 0;
@@ -518,20 +518,24 @@ body {
     }
 
     .login {
-        font-size: 14px;
+        font-size: 16px;
         padding-right: 10px;
         padding-left: 10px;
     }
 
     .sign-up {
-        font-size: 14px;
+        font-size: 16px;
         padding-left: 5px;
         padding-right: 5px;
     }
 
     .search-input {
-        padding-left: 20px;
         margin: 0;
+        width: 260px;
+        height: 50px;
+        border-radius: 5px;
+        border: none;
+        background-image: none;
     }
 
     .button-group {
@@ -547,6 +551,16 @@ body {
         justify-content: center;
         align-items: center;
         margin: 0;
+    }
+
+    .navigation-link {
+        color: #ffff;
+        margin-bottom: 18px;
+        margin-right: 0;
+    }
+
+    .navigation-link:last-child {
+        margin-bottom: 0;
     }
 }
 
