--- a/css/style.css
+++ b/css/style.css
@@ -357,6 +357,17 @@ body {
     margin-top: 14px;
 }
 
+.button-next {
+    background-color: transparent;
+    border: none;
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+    z-index: 99;
+    cursor: pointer;
+}
+
 @media (max-width: 1200px) {
     .container {
         width: 960px;
@@ -522,6 +533,10 @@ body {
         padding-bottom: 70px;
     }
 
+    .news-card {
+        max-width: 90%;
+    }
+
     .mobile-buttons {
         display: block;
         margin-left: auto;
@@ -633,6 +648,7 @@ body {
         width: 100%;
         margin-right: 30px;
     }
+
     .film-text {
         order: 1;
         margin-bottom: 0;
