tabs-content git push origin master git add .
w
q
git add .
git commit -m tabs-content

--- a/css/style.css
+++ b/css/style.css
@@ -298,6 +298,11 @@ body {
     visibility: visible;
 }
 
+.tab {
+    cursor: pointer;
+}
+
+
 .card {
     display: flex;
     align-items: center;
